# OneValet

./: .dockerignore  .env.example  .gitignore  ANALYSIS_INDEX.md  CODE_REFERENCE.md  CONTRIBUTING.md  DEEP_DIVE_ANALYSIS.md  Dockerfile  FIXES_NEEDED.md  LICENSE  MULTIMODAL_EXTENSION_PLAN.md  PIPELINE_QUICK_REFERENCE.txt  QUICK_START.md  README.md  README_ANALYSIS.md  README_PIPELINE_DOCS.md  REMINDER_PIPELINE_ANALYSIS.md  alembic.ini  config.yaml.example  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml
docs/: agents.md  configuration.md  design-react-orchestrator.md  getting-started.md  implementation-plan.md  index.md  llm-providers.md  mcp.md  memory.md  orchestrator.md  proactive-intelligence.md  state-machine.md  streaming.md  tools.md  workflow.md
examples/: 01_greeting.py  02_restaurant_booking.py  03_leave_request.py  04_expense_workflow.py  mcp_integration.py
examples/config/: flowagents.yaml
flowagents/: __init__.py  base_agent.py  fields.py  message.py  protocols.py  result.py  standard_agent.py
flowagents/agents/: __init__.py  decorator.py  discovery.py
flowagents/checkpoint/: __init__.py  manager.py  models.py  storage.py
flowagents/config/: __init__.py  loader.py  registry.py
flowagents/formatter/: __init__.py  base.py  formatters.py  models.py
flowagents/group/: __init__.py  group.py  map_reduce.py  merge.py  models.py
flowagents/hooks/: __init__.py  decorators.py  handlers.py  manager.py  models.py
flowagents/llm/: __init__.py  anthropic_client.py  azure_client.py  base.py  dashscope_client.py  gemini_client.py  ollama_client.py  openai_client.py  registry.py
flowagents/mcp/: __init__.py  provider.py
flowagents/memory/: __init__.py  manager.py  models.py
flowagents/msghub/: __init__.py  hub.py  models.py
flowagents/orchestrator/: __init__.py  models.py  orchestrator.py  pool.py  router.py
flowagents/streaming/: __init__.py  engine.py  models.py
flowagents/tools/: __init__.py  decorator.py  executor.py  models.py  registry.py
flowagents/workflow/: __init__.py  executor.py  loader.py  models.py  resolver.py
koa/: app.py
koa/config/: schema.py
koa/credentials/: encryption.py
koa/llm/: circuit_breaker.py
koa/mcp/: sdk_client.py
koa/memory/: embedding.py  entity_resolver.py  momex.py
koa/observability/: metrics.py  tracing.py
koa/orchestrator/: agent_tool.py  intent_analyzer.py  intent_embedding.py  intent_feedback.py  llm_manager.py  orchestrator.py  react_loop.py  reminder_guard.py
koa/providers/: local_backend.py
koa/server/: app.py
koa/services/: calendar_sync.py
koa/tenant_gate/: budget.py  gate.py  idempotency.py
koa/triggers/: email_handler.py
migrations/: env.py  script.py.mako
migrations/versions/: 001_initial_schema.py  002_tenant_profiles.py  003_tenant_extractions.py  004_cron_tables.py  005_tool_call_history.py  006_momex_schema.py  007_cron_soft_delete.py  008_fix_momex_pgvector.py  009_subscriptions.py  010_agent_plans.py  011_sensing_foundation.py  012_routing_preferences.py  013_calendar_event_fields.py
onevalet/: __init__.py  __main__.py  app.py  base_agent.py  constants.py  errors.py  fields.py  message.py  models.py  protocols.py  result.py  server.py  standard_agent.py  tool_decorator.py
onevalet/agents/: __init__.py  decorator.py  discovery.py  domain_agent.py
onevalet/builtin_agents/: __init__.py
onevalet/checkpoint/: __init__.py  manager.py  models.py  postgres_storage.py  storage.py
onevalet/config/: __init__.py  registry.py
onevalet/credentials/: __init__.py  store.py
onevalet/db/: __init__.py  database.py  initialize.py  repository.py
onevalet/formatter/: __init__.py  base.py  formatters.py  models.py
onevalet/group/: __init__.py  group.py  map_reduce.py  merge.py  models.py
onevalet/hooks/: __init__.py  decorators.py  handlers.py  manager.py  models.py
onevalet/llm/: __init__.py  anthropic_client.py  azure_client.py  base.py  copilot_auth.py  copilot_client.py  dashscope_client.py  fallback.py  gemini_client.py  litellm_client.py  ollama_client.py  openai_client.py  registry.py  router.py
onevalet/mcp/: __init__.py  client.py  models.py  provider.py  sdk_client.py
onevalet/memory/: __init__.py  governance.py  manager.py  models.py  momex.py  true_memory.py
onevalet/msghub/: __init__.py  hub.py  models.py
onevalet/oauth/: __init__.py  google_oauth.py  hue_oauth.py  microsoft_oauth.py
onevalet/orchestrator/: __init__.py  agent_tool.py  approval.py  audit_logger.py  context_manager.py  dag_executor.py  intent_analyzer.py  llm_manager.py  models.py  orchestrator.py  pool.py  postgres_pool.py  prompts.py  react_config.py  react_loop.py  router.py  tool_manager.py  tool_policy.py
onevalet/providers/: __init__.py  http_mixin.py
onevalet/server/: app.py  main.py  models.py
onevalet/services/: profile_extraction.py  profile_repo.py  shipment_poller.py
onevalet/static/: index.html  settings.html
onevalet/streaming/: __init__.py  engine.py  models.py
onevalet/tools/: __init__.py  decorator.py  executor.py  models.py  registry.py
onevalet/triggers/: __init__.py  callback.py  email_handler.py  engine.py  event_bus.py  executor.py  models.py  notification.py  pipeline.py
onevalet/workflow/: __init__.py  executor.py  loader.py  models.py  resolver.py
scripts/: migrate_credentials.py
tests/: __init__.py  test_app.py  test_basic_agent.py  test_imports.py
tests/agents/: test_decorator.py  test_discovery.py
tests/checkpoint/: test_checkpoint.py  test_manager.py  test_memory_storage.py  test_models.py
tests/config/: __init__.py  test_loader.py  test_registry.py
tests/critical/: test_approval_timeout.py  test_circuit_breaker.py  test_credential_encryption_required.py  test_graceful_shutdown.py  test_rate_limit.py
tests/formatter/: __init__.py  test_formatter.py
tests/group/: test_group.py
tests/hooks/: test_hooks.py
tests/integration/: README.md  RESULTS.md  conftest.py  test_edge_cases.py  (+1 more)
(+251 files in other folders)
