[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onevalet"
version = "0.1.1"
description = "A personal AI agent framework with state-driven agents and ReAct orchestration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "OneValet Contributors" }
]
keywords = [
    "agent",
    "llm",
    "ai",
    "workflow",
    "orchestration",
    "state-machine",
    "multi-agent",
    "framework",
    "zero-code",
    "yaml",
    "openai",
    "anthropic",
    "claude",
    "gpt",
    "streaming"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# Core dependencies
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18"]
dashscope = ["dashscope>=1.14"]
gemini = ["google-generativeai>=0.3"]
ollama = ["httpx>=0.25"]
mcp = ["mcp>=0.9"]
all = [
    "openai>=1.0",
    "anthropic>=0.18",
    "dashscope>=1.14",
    "google-generativeai>=0.3",
    "httpx>=0.25",
    "mcp>=0.9",
    "aiosqlite>=0.19",
]

[project.urls]
Homepage = "https://github.com/xiaoyu-work/onevalet"
Documentation = "https://xiaoyu-work.github.io/onevalet"
Repository = "https://github.com/xiaoyu-work/onevalet"
Issues = "https://github.com/xiaoyu-work/onevalet/issues"

[tool.hatch.build.targets.wheel]
packages = ["onevalet"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
