[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onevalet"
version = "0.1.1"
description = "A personal AI agent framework with state-driven agents and ReAct orchestration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "OneValet Contributors" }
]
keywords = [
    "agent",
    "llm",
    "ai",
    "workflow",
    "orchestration",
    "state-machine",
    "multi-agent",
    "framework",
    "zero-code",
    "yaml",
    "openai",
    "anthropic",
    "claude",
    "gpt",
    "streaming"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# Core dependencies
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "asyncpg>=0.27",
    "httpx>=0.25",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "momex @ git+https://github.com/xiaoyu-work/momex.git",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18"]
dashscope = ["dashscope>=1.14"]
gemini = ["google-generativeai>=0.3"]
mcp = ["mcp>=0.9"]
all = [
    "openai>=1.0",
    "anthropic>=0.18",
    "dashscope>=1.14",
    "google-generativeai>=0.3",
    "mcp>=0.9",
]

[project.scripts]
onevalet = "onevalet.server:main"

[project.urls]
Homepage = "https://github.com/xiaoyu-work/onevalet"
Documentation = "https://xiaoyu-work.github.io/onevalet"
Repository = "https://github.com/xiaoyu-work/onevalet"
Issues = "https://github.com/xiaoyu-work/onevalet/issues"

[tool.hatch.build.targets.wheel]
packages = ["onevalet"]

[tool.black]
line-length = 100
target-version = ["py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
